Makes `metrics` config option required in app_insights (#20406)
* mofidy doc

* config

* changelog

* generate

* regen

* mage fmt

--- a/metricbeat/docs/modules/azure.asciidoc
+++ b/metricbeat/docs/modules/azure.asciidoc
@@ -241,7 +241,8 @@ metricbeat.modules:
   period: 300s
   application_id: ''
   api_key: ''
-
+  metrics:
+    - id: ["requests/count", "requests/duration"]
 ----
 
 [float]
