[docs] Promote ingest management to beta (#20295)

--- a/x-pack/elastic-agent/docs/elastic-agent-command-line.asciidoc
+++ b/x-pack/elastic-agent/docs/elastic-agent-command-line.asciidoc
@@ -2,7 +2,7 @@
 [role="xpack"]
 = Command line options
 
-experimental[]
+beta[]
 
 The `elastic-agent run` command provides flags that alter the behavior of an
 agent:
