[Ingest Manager] Move to datastream instead of dataset (#20420)
[Ingest Manager] Move to datastream instead of dataset (#20420)

--- a/x-pack/elastic-agent/docs/elastic-agent-configuration.asciidoc
+++ b/x-pack/elastic-agent/docs/elastic-agent-configuration.asciidoc
@@ -93,17 +93,17 @@ filesystem metrics, and sends them to the default output. For example:
 -------------------------------------------------------------------------------------
 inputs:
   - type: system/metrics
-    dataset.namespace: default
+    data_stream.namespace: default
     use_output: default
     streams:
       - metricset: cpu
-        dataset.name: system.cpu
+        data_stream.dataset: system.cpu
       - metricset: memory
-        dataset.name: system.memory
+        data_stream.dataset: system.memory
       - metricset: network
-        dataset.name: system.network
+        data_stream.dataset: system.network
       - metricset: filesystem
-        dataset.name: system.filesystem
+        data_stream.dataset: system.filesystem
 -------------------------------------------------------------------------------------
 
 If `use_output` is not specified, the `default` output is used.
