[Elastic Agent] Add support for synthetics inputs that run heartbeat (#20387)
* Add support for synthetics inputs that run heartbeat.

* Run mage fmt.

* Add changelog.

* Update test configs to use host instead of hosts.

* Enable support for top-level inputs from Elastic Agent.

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -102,3 +102,4 @@
 - Improved version CLI {pull}20359[20359]
 - Enroll CLI now restarts running daemon {pull}20359[20359]
 - Add restart CLI cmd {pull}20359[20359]
+- Add new `synthetics/*` inputs to run Heartbeat {pull}20387[20387]
