[docs] Add Elastic Agent doc changes for 7.9 (#20437)
* [docs] Add ingest management doc changes for 7.9

* Update Beats agent docs with other 7.9 changes

* Add copy of js/css to reduce dependencies

* Temporarily override release state

* Fix bug in platform selector

* Add changes from review

--- a/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
@@ -5,67 +5,62 @@
 beta[]
 
 {agent} runs in two modes: standalone or fleet. The two modes differ in how you
-configure and manage the Agent.
+configure and manage the agent.
 
 [discrete]
 [[fleet-mode]]
 == Run in {fleet} mode
 
-With _fleet mode_, you manage {agent} remotely. The Agent uses a trusted {kib}
-instance to retrieve configurations and report Agent events. This trusted {kib}
+With _fleet mode_, you manage {agent} remotely. The agent uses a trusted {kib}
+instance to retrieve configurations and report agent events. This trusted {kib}
 instance must have {ingest-manager} and {fleet} enabled.
 
 To create a trusted communication channel between {agent} and {kib}, enroll the
-Agent to {fleet}.
+agent to {fleet}.
 
 To enroll an {agent} to {fleet}:
 
-. Stop the Agent, if it's already running.
+. Stop {agent}, if it's already running.
 
-. Go the **{fleet}** tab in {ingest-manager}, and click **Enroll new agent** to
-generate a token. See <<ingest-management-getting-started>> for detailed steps.
+. In {ingest-manager}, select **{fleet}**, then click **Add agent** to
+get an enrollment token. See <<ingest-management-getting-started>> for
+detailed steps.
 
-. Enroll the Agent:
+. Change to the directory where {agent} is installed, and enroll the agent to
+{fleet}:
 +
-[source,shell]
-----
-./elastic-agent enroll http://localhost:5601 $token
-----
+--
+include::{beats-repo-dir}/x-pack/elastic-agent/docs/tab-widgets/enroll-widget.asciidoc[]
+--
+
+. Run the agent:
 +
-Where `$token` is an enrollment token acquired from {fleet}.
-
-//TODO: Add tabbed panels for platform-specific tabs (waiting for final design)
-
-To start {agent}, run:
-
-// tag::run-agent[]
-[source,shell]
-----
-./elastic-agent run <1>
-----
-<1> On Windows, you must run {agent} under the SYSTEM account if you plan
-to use the {elastic-endpoint} integration.
-// end::run-agent[]
+--
+include::{beats-repo-dir}/x-pack/elastic-agent/docs/tab-widgets/run-widget.asciidoc[]
+--
 
 [discrete]
 [[standalone-mode]]
 == Run in standalone mode (default)
 
-With _standalone mode_, you manually configure and manage the Agent locally.
-Each Agent is configured to be in standalone mode by default after installation.
+With _standalone mode_, you manually configure and manage {agent} locally on the
+system where the agent is installed. {agent} is configured to run in standalone
+mode by default unless you enroll it in {fleet}. 
 
 If {agent} is installed as an auto-starting service, it will run automatically
 when you restart your system.
 
 To start {agent} manually, run:
 
-include::run-elastic-agent.asciidoc[tag=run-agent]
+include::{beats-repo-dir}/x-pack/elastic-agent/docs/tab-widgets/run-standalone-widget.asciidoc[]
 
-If no configuration file is specified, {agent} uses the default configuration,
-`elastic-agent.yml`, which is located in the same directory as {agent}. Specify
-the `-c` flag to use a different configuration file.
+Use the `-c` flag to specify the configuration file. If no configuration file is
+specified, {agent} uses the default configuration, `elastic-agent.yml`, which is
+located in the same directory as {agent}.
 
 For configuration options, see <<elastic-agent-configuration>>.
 
 //<<elastic-agent-configuration-example,`elastic-agent_configuration_example.yml`>>
 
+// Add Javascript and CSS for tabbed panels
+include::tab-widgets/code.asciidoc[]
