--- a/x-pack/elastic-agent/docs/elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/elastic-agent.asciidoc
@@ -1,3 +1,5 @@
+:release-state: released
+
 [[elastic-agent-installation-configuration]]
 [role="xpack"]
 
@@ -8,7 +10,7 @@ beta[]
 // tag::agent-install-intro[]
 {agent} is a single, unified agent that you can deploy to hosts or containers to
 collect data and send it to the {stack}. Behind the scenes, {agent} runs the
-{beats} shippers or Endpoint required for your configuration.
+{beats} shippers or Elastic Endpoint required for your configuration.
 // end::agent-install-intro[]
 
 To learn how to install, configure, and run your {agent}s, see:
@@ -16,6 +18,7 @@ To learn how to install, configure, and run your {agent}s, see:
 * <<elastic-agent-installation>>
 * <<run-elastic-agent>>
 * <<stop-elastic-agent>>
+* <<unenroll-elastic-agent>>
 * <<elastic-agent-cmd-options>>
 * <<elastic-agent-configuration>>
 
@@ -24,6 +27,8 @@ include::install-elastic-agent.asciidoc[leveloffset=+1]
 include::run-elastic-agent.asciidoc[leveloffset=+1]
 
 include::stop-elastic-agent.asciidoc[leveloffset=+1]
+
+include::unenroll-elastic-agent.asciidoc[leveloffset=+1]
 
 include::elastic-agent-command-line.asciidoc[leveloffset=+1]
 
