Update Golang version to 1.14.7 (#20508)

--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -98,3 +98,4 @@ The list below covers the major changes between 7.0.0-rc2 and master only.
 - Remove vendor folder from repository. {pull}18655[18655]
 - Added SQL helper that can be used from any Metricbeat module {pull}18955[18955]
 - Update Go version to 1.14.4. {pull}19753[19753]
+- Update Go version to 1.14.7. {pull}20508[20508]
